[package]
name = "ucloud-cdn-log-parser"
version = "0.1.3"
edition = "2021"
description = "Parse UCloud CDN log files to CSV"
license = "MIT"
repository = "https://github.com/yinheli/ucloud-cdn-log-parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
regex = "1"
csv = "1"


[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = 'abort'